# Haskmon

./: Haskmon.cabal  LICENSE  README.md  haskmon.cabal
src/: Haskmon.hs
src/Haskmon/: Client.hs  Resource.hs  Types.hs
src/Haskmon/Types/: Ability.hs  Description.hs  EggGroup.hs  Evolutions.hs  Game.hs  Internals.hs  MetaData.hs  Move.hs  Pokemon.hs  Sprite.hs  Type.hs
