name:                haskmon
version:             0.1.0.0
synopsis:            A haskell wrapper for PokeAPI.co (www.pokeapi.co)
description:         This is a haskell wrapper for the RESTful api www.pokeapi.co. It defines most of the types and functions to get them.
license:             MIT
license-file:        LICENSE
author:              Pedro Rodriguez
maintainer:          P.J.Rodriguez.T@gmail.com
-- copyright:
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Haskmon, Haskmon.Types, Haskmon.Client, Haskmon.Resource
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.7 && <4.8,
                       http-streams ==0.7.1.1,
                       bytestring ==0.10.0.2,
                       io-streams ==1.1.4.2,
                       aeson ==0.7.*,
                       time,
                       vector ==0.10.*,
                       old-locale == 1.*,
                       containers ==0.5.5.1
  default-language:    Haskell2010
